<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/ic_menu_add" android:id="@id/menu_simple_contact" android:orderInCategory="1" android:title="@string/contactsList" android:showAsAction="withText" />
    <item android:icon="@android:drawable/ic_menu_add" android:id="@id/menu_add_contacts" android:orderInCategory="1" android:title="@string/recentCalls_addToContact" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_speed_dial_settings" android:orderInCategory="1" android:title="@string/speed_dial_setting" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_2sec_pause" android:id="@id/menu_2s_pause" android:orderInCategory="1" android:title="@string/add_2sec_pause" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_wait" android:id="@id/menu_add_wait" android:orderInCategory="1" android:title="@string/add_wait" android:showAsAction="withText" />
    <item android:icon="@drawable/ic_menu_settings_holo_light" android:id="@id/menu_call_settings_dialpad" android:orderInCategory="1" android:title="@string/call_settings" android:showAsAction="withText" />
</menu>
