<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/dialpad" android:background="@drawable/call_dial_panel_bg_01" android:paddingRight="6.0dip" android:layout_width="320.0dip" android:layout_height="302.65625dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:visibility="visible" android:clickable="true" android:layout_width="314.0dip" android:layout_height="242.66dip" android:hapticFeedbackEnabled="true">
        <LinearLayout android:orientation="horizontal" android:id="@id/onetwothree" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="314.0dip" android:layout_height="54.669983dip" android:layout_marginTop="5.3299866dip">
            <ImageButton android:id="@id/one" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_1" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_one" />
            <ImageButton android:id="@id/two" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_2" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_two" />
            <ImageButton android:id="@id/three" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_3" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_three" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/fourfivesix" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="314.0dip" android:layout_height="54.669983dip" android:layout_marginTop="5.3299866dip">
            <ImageButton android:id="@id/four" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_4" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_four" />
            <ImageButton android:id="@id/five" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_5" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_five" />
            <ImageButton android:id="@id/six" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_6" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_six" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/seveneightnine" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="314.0dip" android:layout_height="54.669983dip" android:layout_marginTop="5.3299866dip">
            <ImageButton android:id="@id/seven" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_7" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_seven" />
            <ImageButton android:id="@id/eight" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_8" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_eight" />
            <ImageButton android:id="@id/nine" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_9" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_nine" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/starzeropound" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:layout_width="314.0dip" android:layout_height="54.669983dip" android:layout_marginTop="5.3299866dip">
            <ImageButton android:id="@id/star" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_10" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_star" />
            <ImageButton android:id="@id/zero" android:background="@drawable/call_dial_btn_bg" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_12" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_zero" />
            <ImageButton android:id="@id/pound" android:background="@drawable/call_dial_btn_bg" android:nextFocusRight="@id/star" android:clickable="false" android:layout_width="98.66998dip" android:layout_height="54.669983dip" android:layout_marginLeft="6.0dip" android:src="@drawable/call_dial_btn_bg_11" android:scaleType="fitXY" android:soundEffectsEnabled="false" android:contentDescription="@string/description_image_button_pound" />
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/dialpad_additional_buttons" />
</LinearLayout>
